# PhaseGen

./: .coveragerc  .gitignore  CITATION.md  DESCRIPTION  Makefile  NAMESPACE  README.md  Snakefile  TODO.md  coverage.xml  environment.yml  pyproject.toml
.github/workflows/: run-tests-local.yml  run-tests.yml
PH/: PH.py  __init__.py  coalescent_models.py  comparison.py  demography.py  distributions.py  simulator.py  visualization.py  vizualization.py
R/: phasegen.R
docs/: conf.py  index.rst  performance_notes.md  requirements.txt
docs/_static/: custom.css
docs/modules/: changelog.rst  citing.rst  config.rst  demography.rst  distributions.rst  expm.rst  norms.rst  rewards.rst  settings.rst  spectrum.rst  state_space.rst
docs/reference/: coalescent.ipynb  coalescent_models.ipynb  demography.ipynb  exponentiation_backend.rst  infer_pop_size_change.ipynb  inference.ipynb  installation.rst  installation_python.rst  introduction.rst  miscellaneous.rst  mutation_configs.ipynb  performance.rst  quickstart.ipynb  quickstart_python.ipynb  (+4 more)
envs/: base.yaml  base_old.yaml  build.yaml  dev.yaml  dev_python_v11.yaml  dev_python_v12.yaml  docs.yaml  gh.yaml  grayskull.yaml  r.yaml  requirements.txt  requirements_testing.txt  testing.yaml  testing_pypi.yaml  testing_pypi_test.yaml
phasegen/: __init__.py  caching.py  coalescent_models.py  comparison.py  demography.py  distributions.py  distributions_dep.py  distributions_deprecated.py  expm.py  inference.py  lineage.py  locus.py  models.py  norms.py  population.py  rewards.py  serialization.py  settings.py  spectrum.py  state.py  state_space.py  state_space_numba.py  state_space_old.py  transition.py  utils.py  visualization.py
scripts/: JSON.py  PH.py  benchmark_backends.py  benchmark_expm.py  benchmark_scenario.py  benchmark_state_space_creation.py  calculate_2sfs.py  calculate_2sfs_dpgp3.py  combine_plots.py  comp.py  compare_coalescent_models.py  compare_inference_runtime_dadi.py  compare_moments.py  compare_moments_from_comparison.py  compare_moments_from_comparison_1.py  compare_moments_from_config.py  compare_moments_legacy.py  compare_pdf.py  compute_tricky_moments.py  create_bootstrap.py  create_comparison.py  fit_mmc_kingman.py  generate_2locus_fixtures.py  generate_jsfs_fixtures.py  generate_jsfs_reference.py  infer_1_epoch_demography.py  infer_mmc_kingman_2sfs.py  infer_mmc_kingman_sfs.py  infer_pop_size_change.py  manuscript_code_blocks.py  merge_benchmarks.py  merge_bootstraps.py  merge_seqs_dpgp3.py  perform_comparison.py  plot_comparison.py  plot_comparison_from_config.py  plot_conditional_pdfs.ipynb  plot_discretization_example.py  plot_example_pop_size_changes.py  plot_execution_times.py  (+47 more)
testing/: __init__.py  conftest.py  custom_test_case.py  test_closed_form_last_epoch.py  test_coalescent_models.py  test_coalescents.py  test_comparison.py  test_constant_pop_size.py  test_coverage_gaps.py  test_demography.py  test_distributions.py  test_expm.py  test_expm_action.py  test_flattening_weights.py  test_fst.py  test_inference.py  test_joint_sfs.py  test_lineage_config.py  test_locus_config.py  test_models.py  test_moment_routing.py  test_msprime_ground_truth.py  test_norms.py  test_numba.py  test_pop_config.py  test_rewards.py  test_scenarios.py  test_sparse_dense_equivalence.py  test_spectrum.py  test_state_space.py  test_tajimas_d.py  test_transition.py  test_two_locus_sfs.py  test_variable_pop_size.py
tests/: testthat.R
(+440 files in other folders)
