[tool.poetry]
name = "phasegen"
version = "1.0.0"
description = "Computation and inference on exact solutions of coalescent distributions under diverse demographic scenarios."
authors = ["Sendrowski <sendrowski.janek@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
typing-extensions = "^4.11.0"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
numpy = "^1.26.4"
pandas = "^2.2.2"
jsonpickle = "^3.0.4"
multiprocess = "^0.70.16"
pyyaml = "^6.0.1"
tqdm = "^4.66.2"
scipy = "^1.13.0"
fastdfe = ">=1.1.5"

# problems installing msprime with poetry
[tool.poetry.group.dev.dependencies]
urllib3 = "^1.26.0" # problems with poetry and urllib3 version 2
sphinx_book_theme = "^1.1.2"
sphinx-autodoc-typehints = "^2.1.0"
sphinx-copybutton = "^0.5.2"
myst-nb = "^1.1.0"
sphinx = "^7.3.7"
pygments = "^2.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
